tests/neg/i4935.scala
object Foo {
  val (A, B) = () // error // error
  val (`a`, `b`) = () // error // error
}
